php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #18405 exif_read_data() timeouts, reading tiff headers.
Submitted: 2002-07-18 04:57 UTC Modified: 2005-02-01 23:00 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:0 of 0 (0.0%)
From: johan at 6thgear dot se Assigned: helly (profile)
Status: Closed Package: EXIF related
PHP Version: 4CVS-2002-07-18 OS: Win XP; Windows NT localhost 5.1
Private report: No CVE-ID: None
 [2002-07-18 04:57 UTC] johan at 6thgear dot se
exif_read_data() timeouts, reading tiff headers, when files are saved with Adobe Photoshop 7.0 (MAC OSX). JPEG headers are fine.

Server System:
SERVER_SOFTWARE: Apache/1.3.26 (Win32) PHP/4.3.0-dev 
Build Date: Jul 16 2002 12:10:27

System: Windows NT localhost 5.1 build 2600

EXIF Version: 1.4 $Id: exif.c,v 1.99 2002/07/02 22:38:37 helly Exp $

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-07-18 08:49 UTC] johan at 6thgear dot se
Resulting in two warnings:
1. read_exif_data(): Error in TIFF: Illegal format, suppose bytes

2. read_exif_data(): Illegal format code in IFD: 0x000D
 [2002-07-20 10:58 UTC] helly@php.net
Need an image that caused the error.
 [2002-07-21 06:51 UTC] johan at 6thgear dot se
U've got it =) cheers.
 [2002-07-22 15:32 UTC] helly@php.net
This bug has been fixed in CVS. You can grab a snapshot of the
CVS version at http://snaps.php.net/. In case this was a documentation 
problem, the fix will show up soon at http://www.php.net/manual/.
In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites.
Thank you for the report, and for helping us make PHP better.

Thanks for the images :-)
Timeout was fixed by changing array of (s)byte conversions
to stringl.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 21 03:00:02 2026 UTC