-handling of thumbnails in sub IFDs (the Photoshopway for TIFF) -Some Photoshop specific tags #after the last patches this finally fixes all warnings and errors in bug #18405

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@89723 c90b9560-bf6c-de11-be94-00142212c4b1